--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
+    "@next/swc-win32-x64-msvc": "^14.2.5",
     "apexcharts": "^3.49.1",
     "classnames": "^2.5.1",
-    "next": "^14.2.3",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
